@@ -33,9 +33,10 @@ class OverviewServiceTest {
     List<DummyVersionable> mergedVersions = OverviewService.mergeVersionsForDisplay(List.of(version1, version2),
         DummyVersionable::getSloid);
     assertThat(mergedVersions).hasSize(1);
-    assertThat(mergedVersions.get(0).getValidFrom()).isEqualTo(LocalDate.of(2020, 1, 1));
-    assertThat(mergedVersions.get(0).getValidTo()).isEqualTo(LocalDate.of(2021, 12, 31));
-    assertThat(mergedVersions.get(0).getId()).isEqualTo(2);
+    DummyVersionable firstVerison = mergedVersions.getFirst();
+    assertThat(firstVerison.getValidFrom()).isEqualTo(LocalDate.of(2020, 1, 1));
+    assertThat(firstVerison.getValidTo()).isEqualTo(LocalDate.of(2021, 12, 31));
+    assertThat(firstVerison.getId()).isEqualTo(2);
   }
 
   @Test
@@ -56,7 +57,7 @@ class OverviewServiceTest {
     List<DummyVersionable> mergedVersions = OverviewService.mergeVersionsForDisplay(List.of(version1, version2),
         DummyVersionable::getSloid);
     assertThat(mergedVersions).hasSize(1);
-    assertThat(mergedVersions.get(0).getId()).isEqualTo(1);
+    assertThat(mergedVersions.getFirst().getId()).isEqualTo(1);
 
     Container<DummyVersionable> pagedContainer = OverviewService.toPagedContainer(mergedVersions, Pageable.ofSize(1));
     assertThat(pagedContainer.getTotalCount()).isEqualTo(1);
@@ -86,6 +87,33 @@ class OverviewServiceTest {
     List<DummyVersionable> mergedVersions = OverviewService.mergeVersionsForDisplay(List.of(version1, other, version2),
         DummyVersionable::getSloid);
     assertThat(mergedVersions).hasSize(2);
+  }
+
+  @Test
+  void shouldMergeVersionsCorrectlyPreservingSort() {
+    DummyVersionable version1 = DummyVersionable.builder()
+        .id(1L)
+        .sloid("ch:1:sloid:7001")
+        .validFrom(LocalDate.now().minusDays(1))
+        .validTo(LocalDate.now().plusDays(1))
+        .build();
+    DummyVersionable other = DummyVersionable.builder()
+        .id(3L)
+        .sloid("ch:1:sloid:7001")
+        .validFrom(LocalDate.now().minusDays(1))
+        .validTo(LocalDate.now().plusDays(1))
+        .build();
+    DummyVersionable version2 = DummyVersionable.builder()
+        .id(2L)
+        .sloid("ch:1:sloid:7000")
+        .validFrom(LocalDate.now().plusDays(2))
+        .validTo(LocalDate.now().plusDays(20))
+        .build();
+
+    List<DummyVersionable> mergedVersions = OverviewService.mergeVersionsForDisplay(List.of(version1, other, version2),
+        DummyVersionable::getSloid);
+    assertThat(mergedVersions).hasSize(2);
+    assertThat(mergedVersions.getFirst().getSloid()).isEqualTo("ch:1:sloid:7001");
   }
 
   @Builder
